p3/confs/app/deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: wil-playground
  namespace: dev

spec:
  replicas: 1

  selector:
    matchLabels:
      app: wil-playground

  template:
    metadata:
      labels:
        app: wil-playground

    spec:
      containers:
        - name: wil-playground
          image: wil42/playground:v1
          imagePullPolicy: Always

          ports:
            - name: http
              containerPort: 8888
