p3/confs/app/service.yaml
apiVersion: v1
kind: Service

metadata:
  name: wil-playground
  namespace: dev

spec:
  type: ClusterIP

  selector:
    app: wil-playground

  ports:
    - name: http
      port: 8888
      targetPort: http
