p3/confs/app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: wil-playground
  namespace: dev

spec:
  ingressClassName: traefik

  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix

            backend:
              service:
                name: wil-playground

                port:
                  number: 8888
